improved source code, added example js file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,15 @@
 cmake_minimum_required(VERSION 3.26)
-project(senkojs VERSION 0.2 LANGUAGES CXX)
+project(senkojs VERSION 0.2 LANGUAGES C CXX)
 
 find_package(PkgConfig REQUIRED)
 
 pkg_check_modules(SPIDERMONKE REQUIRED mozjs-102)
 
+FILE(GLOB SRC ./src/*.cpp)
 set(CMAKE_EXPORT_COMPILE_COMMANDS true)
 
-add_executable(hello ./src/hello.cpp ./src/boilerplate.cpp)
-target_link_libraries(hello ${SPIDERMONKE_LIBRARIES})
-target_include_directories(hello PUBLIC ${SPIDERMONKE_INCLUDE_DIRS})
-target_compile_options(hello PUBLIC ${SPIDERMONKE_CFLAGS_OTHER})
+add_executable(senkora ${SRC})
+target_link_libraries(senkora ${SPIDERMONKE_LIBRARIES})
+target_include_directories(senkora PUBLIC ${SPIDERMONKE_INCLUDE_DIRS})
+target_compile_options(senkora PUBLIC ${SPIDERMONKE_CFLAGS_OTHER})
+set(EXECUTABLE_OUTPUT_PATH ../)
