--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,12 @@
 cmake_minimum_required(VERSION 3.22)
 project(senkora VERSION 0.2 LANGUAGES C CXX)
 
+
+set(CMAKE_EXPORT_COMPILE_COMMANDS true)
+
 find_package(PkgConfig REQUIRED)
 
-pkg_check_modules(SPIDERMONKE IMPORTED_TARGET REQUIRED mozjs-102)
+pkg_check_modules(SPIDERMONKE IMPORTED_TARGET REQUIRED mozjs-115a1)
 
 FILE(GLOB SRC ./src/*.cpp ./src/api/*.cpp)
 
