goodbye spidermonkey and hello world to V8! Oh and hello to nix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,19 @@
 cmake_minimum_required(VERSION 3.22)
 project(senkora VERSION 0.2 LANGUAGES C CXX)
 
-
 set(CMAKE_EXPORT_COMPILE_COMMANDS true)
 
 find_package(PkgConfig REQUIRED)
 
-pkg_check_modules(SPIDERMONKE IMPORTED_TARGET REQUIRED mozjs-115a1)
+pkg_check_modules(V8 IMPORTED_TARGET REQUIRED v8)
 
 FILE(GLOB SRC ./src/*.cpp ./src/api/*.cpp)
 
+link_directories(${V8_LIBRARY_DIRS})
+
 add_executable(senkora ${SRC})
-target_link_libraries(senkora ${SPIDERMONKE_LIBRARIES})
-target_include_directories(senkora PUBLIC ${SPIDERMONKE_INCLUDE_DIRS})
-target_include_directories(senkora PUBLIC ./src/api/)
-target_compile_options(senkora PUBLIC ${SPIDERMONKE_CFLAGS_OTHER})
+add_compile_definitions(V8_COMPRESS_POINTERS)
+target_link_libraries(senkora ${V8_LIBRARIES})
+target_include_directories(senkora PUBLIC ${V8_INCLUDE_DIRS})
+target_compile_options(senkora PUBLIC ${V8_CFLAGS_OTHER})
 set(EXECUTABLE_OUTPUT_PATH ../dist)
