--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -9,7 +9,7 @@ jobs:
     - uses: cachix/install-nix-action@v20
       with:
         nix_path: nixpkgs=channel:nixos-22.11
-    - run: true
+    - run: # empty
         
     - name: Compile
       run: nix-shell --run "./make.sh"
@@ -50,4 +50,5 @@ jobs:
           name: Nightly Build ${{ steps.vars.outputs.sha_short }}
           draft: false
           prerelease: false
-          files: senkora-linux.zip
+          files: |
+            senkora-linux.zip
