--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -5,11 +5,11 @@ jobs:
   compile:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
     - uses: cachix/install-nix-action@v20
       with:
         nix_path: nixpkgs=channel:nixos-22.11
-    - run: true
+    - run: nix-shell --run "true"
         
     - name: Compile
       run: nix-shell --run "./make.sh"
@@ -26,7 +26,7 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
 
       - name: Download senkora-linux artifact
         uses: actions/download-artifact@v3
