--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -50,5 +50,4 @@ jobs:
           name: Nightly Build ${{ steps.vars.outputs.sha_short }}
           draft: false
           prerelease: false
-          files: |
-            senkora-linux.zip
+          files: senkora-linux
