--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -4,8 +4,8 @@ on:
 jobs:
   compile:
     runs-on: ubuntu-latest
+    name: Prepare
     steps:
-    - name: Prepare
     - uses: actions/checkout@v2
     - uses: cachix/install-nix-action@v20
       with:
