--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -2,7 +2,7 @@ name: "Nightly Build"
 on:
   push:
 jobs:
-  compile:
+  Compile:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -20,9 +20,9 @@ jobs:
         name: senkora-linux
         path: ./dist/senkora
         
-  publish:
+  Publish:
     runs-on: ubuntu-latest
-    needs: [compile]
+    needs: [Compile]
     permissions:
       contents: write
     steps:
@@ -53,4 +53,4 @@ jobs:
           name: Nightly Build ${{ steps.vars.outputs.sha_short }}
           draft: false
           prerelease: false
-          files: senkora/senkora-linux.zip
+          files: senkora
