--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,4 +16,5 @@ add_compile_definitions(V8_COMPRESS_POINTERS)
 target_link_libraries(senkora ${V8_LIBRARIES})
 target_include_directories(senkora PUBLIC ${V8_INCLUDE_DIRS})
 target_compile_options(senkora PUBLIC ${V8_CFLAGS_OTHER})
+set(CMAKE_INSTALL_RPATH "/lib64/")
 set(EXECUTABLE_OUTPUT_PATH ../dist)
