--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -13,14 +13,24 @@ jobs:
         
     - name: Compile
       run: nix-shell --run "./make.sh"
+
     - name: Patch elf
       run: nix-shell --run "patchelf --set-interpreter /lib64/ld-linux-x86-64.so.2 ./dist/senkora"
+
+    - name: Strip
+      run: strip --strip-unneeded ./dist/senkora -o ./dist/senkora-slim
       
-    - name: Upload artifacts
+    - name: Upload unstripped
       uses: actions/upload-artifact@v3
       with:
         name: senkora-linux
         path: ./dist/senkora
+    
+    - name: Upload stripped
+      uses: actions/upload-artifact@v3
+      with:
+        name: senkora-linux-slim
+        path: ./dist/senkora-slim
         
   Publish:
     runs-on: ubuntu-latest
@@ -34,6 +44,11 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: senkora-linux
+
+      - name: Download senkora-linux artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: senkora-linux-slim
       
       - uses: dev-drprasad/delete-tag-and-release@085c6969f18bad0de1b9f3fe6692a3cd01f64fe5
         with:
@@ -52,4 +67,6 @@ jobs:
           name: Nightly Build ${{ steps.vars.outputs.sha_short }}
           draft: false
           prerelease: false
-          files: senkora
+          files: |
+            senkora
+            senkora-slim
