--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Download senkora-linux artifact
         uses: actions/download-artifact@v3
         with:
-          name: senkora-linux-slim
+          name: senkora-linux-stripped
       
       - uses: dev-drprasad/delete-tag-and-release@085c6969f18bad0de1b9f3fe6692a3cd01f64fe5
         with:
