--- a/.gitignore
+++ b/.gitignore
@@ -227,5 +227,6 @@ _deps
 # Ignore all local history of files
 .history
 .ionide
+.vscode/
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,c++,c,clion,cmake
