--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "libs/libFoxEvents"]
 	path = libs/libFoxEvents
-	url = git@github.com:SenkoraJS/libFoxEvents.git
+    url = https://github.com/SenkoraJS/libFoxEvents.git
