--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ include_directories(./libs/libFoxEvents/src/)
 add_executable(senkora ${SRC})
 target_link_libraries(senkora foxevents)
 add_compile_definitions(V8_COMPRESS_POINTERS)
-target_link_libraries(senkora ${V8_LIBRARIES})
+target_link_libraries(senkora ${V8_LIBRARIES} toml)
 target_include_directories(senkora PUBLIC ${V8_INCLUDE_DIRS})
 target_compile_options(senkora PUBLIC ${V8_CFLAGS_OTHER})
 set(EXECUTABLE_OUTPUT_PATH ../dist)
